--- a/src/main/webapp/monitor1/index.html
+++ b/src/main/webapp/monitor1/index.html
@@ -170,6 +170,7 @@
 <script src="../js/controlVistas.js"></script>
 
 <script type="module" src="../js/graficas/inicializadorGraficas.js"></script>
+<script src="../js/refresh_datos_server/refresh_server.js"></script>
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
