--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -167,7 +167,7 @@
 
 <!-- Archivos JavaScript -->
 <script src="js/cambioLogo.js"></script>
-<!--<script src="js/controlVistas.js"></script>-->
+<script src="js/controlVistas.js"></script>
 
 <script type="module" src="js/graficas/inicializadorGraficas.js"></script>
 
